--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.11"
 opencv-python = "^4.9.0.80"
+jupyter = "^1.0.0"
 
 
 [build-system]
